# xeus-qt

./: .gitignore  CMakeLists.txt  README.md  env.yml  environment-dev.yml  xqConfig.cmake.in
.github/workflows/: main.yml
example_lua/: CMakeLists.txt  main.cpp
examples/: AppleInfo.plist  CMakeCache.txt  CMakeLists.txt  icon.icns  kernel.json  main.cpp  xqConfig.cmake
include/xq/: xq.hpp  xqGenericApplication.hpp  xqGenericInterpreter.hpp  xqKernelModule.hpp  xqQtPoller.hpp  xqServer.hpp  xq_qt_poller.hpp  xq_server.hpp
include/xqse_me/: xq_config.hpp  xqse_me_config.hpp
share/jupyter/kernels/xq/: kernel.json  kernel.json.in
src/: xqGenericApplication.cpp  xqGenericInterpreter.cpp  xqKernelModule.cpp  xqQtPoller.cpp  xqServer.cpp  xq_qt_poller.cpp  xq_server.cpp
